Scrolling fixes for studio; 1. AceEditor has larger minHeight; 2. Studio.css no longer screws with panel scroll overflow breaking all kinds of autoscrolling code; 3. Studio.widgets.js adds width to widgets that used implicit/justified width; without this width, calculations for autoscrolling were thrown off
git-svn-id: https://src.springsource.com/svn/wm_svn/eng3/trunk@33179 bab4cc61-abf4-0310-9601-8b162d8b0fb1

--- a/dev/studio/webapproot/pages/Studio/Studio.css
+++ b/dev/studio/webapproot/pages/Studio/Studio.css
@@ -1023,7 +1023,6 @@ table.studio_navigationMenu_PopupMenu img.dijitMenuItemIcon.PartnerService
 	/* FIXME: layout is overriding this without important
 		incredo annoying if these divs don't scroll
 	 */
-	overflow-y: auto !important;
 }
 
 .Studio-pageNameInputLabel {
@@ -1652,7 +1651,6 @@ body.wm-darksnazzy .wmToolbar button:hover {
 .Studio .wmpalette {
 	font-weight: bold;
 	padding-top: 0;
-	overflow-y: auto !important;
 }
 
 /* argh */
